public/css/style.css
html {
    scroll-behavior: smooth;
    font-family: "Open Sans", sans-serif;
}

img {
    max-width: 100%;
}

h1 {
    font-size: 40px;
    text-align: center;
}

p {
    line-height: 2;
    letter-spacing: 1px;
}

#about {
    text-align: center;
}

